add minimal client behavior

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
 all: server
 
-server: server.c network.c clients.c
-	gcc server.c clients.c network.c -o server
+server: server.c ../network.c clients.c
+	gcc server.c clients.c ../network.c -o server
