--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,4 @@
 all: client
 
-client: client.c ../network.c
-	gcc client.c ../network.c -o client
+client: client.c ../network.c ui.c
+	gcc client.c ../network.c ui.c -lncurses -o client
